# nperf

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindNCCL.cmake  FindNVML.cmake  nperfConfig.cmake.in
docs/: README.md  cli-reference.md  getting-started.md
docs/advanced/: environment-variables.md  performance-tuning.md  troubleshooting.md
docs/benchmarking/: collective-operations.md  cuda-graphs.md  data-types.md  verification.md
docs/coordination/: local.md  mpi.md  nccl-bootstrap.md  overview.md  socket.md
docs/examples/: kubernetes.md  multi-node-mpi.md  multi-node-socket.md  single-node.md
docs/output/: formats.md  topology.md
include/nperf/: compiler_hints.h  config.h  log.h  nperf.h  results.h  types.h  version.h.in
include/nperf/cli/: parser.h
include/nperf/coordination/: coordinator.h  mpi_coordinator.h  nccl_bootstrap_coordinator.h  socket_coordinator.h
include/nperf/core/: collective.h  engine.h  graph.h  memory.h  metrics.h  timing.h
include/nperf/output/: formatter.h  json_formatter.h  text_formatter.h  topo_visualizer.h
include/nperf/topology/: detector.h
include/nperf/verification/: verifier.h
src/cli/: main.cpp  parser.cpp
src/coordination/: coordinator.cpp  mpi_coordinator.cpp  nccl_bootstrap_coordinator.cpp  socket_coordinator.cpp
src/core/: collective.cpp  engine.cpp  graph.cpp  memory.cpp  metrics.cpp  timing.cpp
src/lib/: libnperf.cpp
src/output/: formatter.cpp  json_formatter.cpp  text_formatter.cpp  topo_visualizer.cpp
src/topology/: detector.cpp  nvlink.cpp  pcie.cpp  rdma.cpp
src/verification/: verifier.cpp
tests/: CMakeLists.txt  test_main.cpp  test_utils.h
tests/integration/: test_collective.cpp  test_coordinators.cpp  test_cuda_timer.cpp  test_device_buffer.cpp  test_engine.cpp  test_graph.cpp  test_memory_manager.cpp  test_topology.cpp  test_verifier.cpp
tests/unit/: test_cli_parser.cpp  test_config.cpp  test_formatters.cpp  test_metrics.cpp  test_results.cpp  test_types.cpp  test_verifier_logic.cpp
